tests/errors/from_json_wrong_type.dang
type Summary {
  pub name: String!
}

let summary: Summary! = fromJSON("\"not an object\"")
